UtahLiveDataTest/src/objects/KeyPerformanceCategory__c.object
<CustomObject>
    <description>[Business] Defines all the Key performance categories for the KPI measurement</description>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KeyPerformanceCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Performance Category</label>
        <referenceTo>KeyPerformanceCategory__c</referenceTo>
        <relationshipName>Key_Performance_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MST: Key Performance Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>InternalUniqueID__c</columns>
        <columns>KeyPerformanceCategory__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Performance Categories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>